Bug 349131 - Ark Unrar not working anymore in plasma5, opensuse tumbleweed kde5 64bit.
Summary: Ark Unrar not working anymore in plasma5, opensuse tumbleweed kde5 64bit.
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Raphael Kubo da Costa
URL: https://www.dropbox.com/s/y3et7i4s2hx...
Keywords:
: 349682 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-14 06:11 UTC by Ezequiel Ortiz Rossner
Modified: 2015-09-08 17:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ezequiel Ortiz Rossner 2015-06-14 06:11:01 UTC
A video is worth more than a thousand words, so here's a video that will show you whats happening on my pc:  

[url]https://www.dropbox.com/s/y3et7i4s2hx5y1m/vokoscreen-2015-06-14_01-28-04.mkv?dl=0[/url]

https://www.dropbox.com/s/y3et7i4s2hx5y1m/vokoscreen-2015-06-14_01-28-04.mkv?dl=0


If I run Ark from a terminal, this is the output I get when trying to decompress a Rar archive:

[CODE]ezequiel@ezequiel-linux:~> ark
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-excel.sheet.binary.macroEnabled.12" 
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-excel.addin.macroEnabled.12" 
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-powerpoint.slideshow.macroEnabled.12" 
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-excel.sheet.macroEnabled.12" 
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-powerpoint.presentation.macroEnabled.12" 
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-word.template.macroEnabled.12" 
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-excel.template.macroEnabled.12" 
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-powerpoint.template.macroEnabled.12" 
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-word.document.macroEnabled.12" 
ark(4290) KMimeTypeRepository::parents: "/usr/share/mime/subclasses"  refers to unknown mimetype  "application/vnd.ms-powerpoint.slide.macroEnabled.12" 
ezequiel@ezequiel-linux:~> 
[/CODE]

Reproducible: Always

Steps to Reproduce:
1.Try to decompress RAR archive using Ark or the right click menu option "Extract Here"
2.
3.
Comment 1 Ragnar Thomsen 2015-06-15 18:14:36 UTC
Thanks for reporting. Can you confirm that this only happens when the file(s) already exists?
Comment 2 Ezequiel Ortiz Rossner 2015-06-16 03:01:31 UTC
Hi, Apparently, Ark Unrar doesn't work because is an KDE4 application, not plasma5, this is what wolfi, an opensuse forum moderator wrote about: 

[So, does it work if you open the RAR file with Ark instead of trying the "Extract Here" context menu option?
Or does extracting work with unrar on the command line? (that's what Ark uses).

Ark is still a KDE4 application, and the desktop shouldn't matter to Ark as I wrote already.
But the ServiceMenu ("Extract Here" and so on) is missing in Plasma5. The KDE4 Ark only installs a ServiceMenu for KDE4, but that would affect _all_ file types of course.

You could also try the KF5 based Ark from KDE:Unstable:Extra, but that has not been released yet. It will probably be part of KDE Applications 15.08 to be released in August, and you'll get it in Tumbleweed shortly afterwards.]

I followed wolfi's advice and tried extracting the RAR archive using "unrar" in a terminal and it worked, the file was extracted, for more info about the bug please look here: 

https://forums.opensuse.org/showthread.php/508036-Extract-compressed-file-function-not-working-anymore-in-kde5-%28plasma-5%29-in-tumbleweed?p=2715366#post2715366
Comment 3 Ragnar Thomsen 2015-06-16 05:46:29 UTC
Can you answer the above question, please? Does it work if you extract to a location where the file doesn't exist already?
Comment 4 Ezequiel Ortiz Rossner 2015-06-16 06:07:01 UTC
No, it won't work!
Comment 5 Ragnar Thomsen 2015-06-16 10:30:33 UTC
Can you try building the current frameworks branch and see if this still occurs? Also it would be helpful if you reported the ark and unrar version on your system.
Comment 6 Ragnar Thomsen 2015-06-16 12:33:13 UTC
From the video, it looks like you are always overwriting some files. Are you absolutely certain that this also occurs when not overwriting any files?
Try to copy a rar archive into an empty directory and then right-clicking it and select "Extract->Extract archive here"...
Comment 7 Ezequiel Ortiz Rossner 2015-06-16 14:57:53 UTC
Yes, I will do some more tests and let you know later in the day, thank you!
Comment 8 Ezequiel Ortiz Rossner 2015-06-17 04:43:06 UTC
Hi Mr. Thomsen, If I copy the RAR archives into an empty directory and then right-click it and select "Extract->Extract archive here" it does work, however if the extracted file already exist it will stall or fail.
Comment 9 Ragnar Thomsen 2015-06-17 09:35:15 UTC
Ok, thanks for confirming :)

This should be fixed in Applications 15.08.
Comment 10 Raphael Kubo da Costa 2015-07-12 19:24:12 UTC
*** Bug 349682 has been marked as a duplicate of this bug. ***
Comment 11 Ragnar Thomsen 2015-09-08 17:44:12 UTC
Git commit fba2a2201deaf0ec4407e2dc2fba61c2e1f4a088 by Ragnar Thomsen.
Committed on 08/09/2015 at 17:26.
Pushed by rthomsen into branch 'Applications/15.08'.

Add support for overwrite prompt of unrar 5

The overwrite prompt changed in unrar 5 compared to unrar 3 and 4. This
commit adds support for the unrar 5 prompt. Unrar 5 has a multi-line
overwrite prompt, i.e. the last line of the overwrite prompt does not
contain the name of the existing file, which is needed by the
OverwriteQuery to display the filename to the user. This was solved by
storing the filename in a member variable m_storedFileName, so it is
available when the last line of the overwrite prompt is reached. To
capture the filename, a new parameter, FileExistsFileName, was added to
the CliInterfaceParameters enum.

7z also has a multi-line overwrite prompt, so previously the filename
was not displayed in the OverwriteQuery dialog. This is now fixed.
FIXED-IN: 15.08.1
REVIEW: 124111

M  +14   -4    kerfuffle/cliinterface.cpp
M  +11   -3    kerfuffle/cliinterface.h
M  +3    -2    plugins/cli7zplugin/cliplugin.cpp
M  +1    -0    plugins/clilhaplugin/cliplugin.cpp
M  +4    -1    plugins/clirarplugin/cliplugin.cpp
M  +2    -1    plugins/clizipplugin/cliplugin.cpp

http://commits.kde.org/ark/fba2a2201deaf0ec4407e2dc2fba61c2e1f4a088